# Balance

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-push
apps/: interactive_dashboard.py
config/: scenarios.json
docs/: FEATURE_STATUS_OVERVIEW.md  MORTGAGE_CLEANROOM_MIGRATION.md  PARALLEL_AGENT_WORKFLOW.md
examples/: run_derivatives.py  run_pv.py
requests/: 20260214-120000-add-fixed-float-swap-pricer-demo.md  20260214-153429-add-german-fixed-rate-mortgage-loan-pricer-behavioural-prepayment-model-c9f2b41e.md  20260214-154500-add-corporate-bond-pricer-fixed-float-with-constant-prepayment-rates-e63151c0.md  20260214-154935-add-retail-bank-derivatives-suite-irs-swaptions-cds-ccs-fx-swaps-etc-1ccb229f.md  20260214-155407-add-retail-bank-derivatives-suite-irs-swaptions-cds-ccs-fx-swaps-etc-a8d3e830.md  20260214-155425-integrate-existing-mortgage-model-into-product-engine-extend-for-new-use-cases-20eb62b2.md  20260214-170808-add-interactive-gui-dashboard-for-cashflow-drill-down-portfolio-insights-19c7d4e8.md  20260214-171701-add-risk-sensitivities-engine-dv01-cs01-fx-delta-184e81cb.md  20260214-171702-add-deterministic-curve-calibration-and-interpolation-framework-e170013e.md  20260214-171703-add-callable-bond-pricing-with-short-rate-lattice-d9a34f9b.md  20260214-171704-add-collateral-and-csa-discounting-layer-63e39814.md  README.md
scripts/: agent_complete_feature.ps1  agent_publish_feature.ps1  agent_worktree_finish.ps1  agent_worktree_start.ps1  enable_agent_hooks.ps1  new_feature_request.py
src/: __init__.py
tests/: test_benchmark_targets.py  (+32 more)
(+34 files in other folders)
