[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balance-pv-engine"
version = "0.1.0"
description = "Balance sheet PV and PV-at-Risk engine"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
